kubernetes/yaml/resources/default-networkpolicies.yml
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: default-only-dns-egress
spec:
  policyTypes:
    - Egress
  podSelector: {}
  egress:
    - ports:
        - port: 53
          protocol: TCP
        - port: 53
          protocol: UDP
      to: []
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: default-only-dns-ingress
spec:
  podSelector: {}
  ingress:
    - ports:
        - port: 53
          protocol: TCP
        - port: 53
          protocol: UDP
      from: []
